hotfix(searchProblems) : 문제 검색 로직 수정